[Untested] Added arithmetic to "conditionals"; Bumped Version