@@ -2,16 +2,17 @@ package com.minenash.customhud.conditionals;
 
 import com.minenash.customhud.ComplexData;
 import com.minenash.customhud.HudElements.HudElement;
-import com.minenash.customhud.HudElements.StringElement;
 import com.minenash.customhud.VariableParser;
 import com.minenash.customhud.errors.ErrorException;
 import com.minenash.customhud.errors.ErrorType;
 import com.minenash.customhud.errors.Errors;
+import com.mojang.datafixers.util.Pair;
 
 import java.util.ArrayList;
 import java.util.List;
 
-public class ConditionalParser {
+@SuppressWarnings("DuplicatedCode")
+public class ExpressionParser {
 
     enum TokenType { START_PREN, END_PREN, FULL_PREN, AND, OR, MATH, COMPARISON, NUMBER, STRING, BOOLEAN, VARIABLE }
     enum Comparison { LESS_THAN, LESS_THAN_OR_EQUAL, GREATER_THAN, GREATER_THAN_OR_EQUALS, EQUALS, NOT_EQUALS }
@@ -23,26 +24,26 @@ public class ConditionalParser {
         }
     }
 
-    public static Operation parseConditional(String input, String source, int profile, int debugLine, ComplexData.Enabled enabled) {
+    public static Operation parseConditional(String input, String source, int profileNum, int debugLine, ComplexData.Enabled enabled) {
         if (input.isBlank() || input.equals(",") || input.equals(", "))
             return new Operation.Literal(1);
         try {
-            List<Token> tokens = getTokens(input, profile, debugLine, enabled);
+            List<Token> tokens = getTokens(input, profileNum, debugLine, enabled);
             Operation c = getConditional(tokens);
-//            System.out.println("Tree for Conditional on line " + debugLine + ":");
-//            c.printTree(0);
-//            System.out.println();
+            System.out.println("Tree for Conditional on line " + debugLine + ":");
+            c.printTree(0);
+            System.out.println();
             return c;
         }
         catch (ErrorException e) {
-            Errors.addError(profile, debugLine, source, e.type, e.context);
+            Errors.addError(profileNum, debugLine, source, e.type, e.context);
             System.out.println("[Line: " + debugLine + "] Conditional Couldn't Be Parsed: " + e.getMessage());
             System.out.println("Input: \"" + input + "\"");
             return new Operation.Literal(1);
         }
     }
 
-    private static List<Token> getTokens(String original, int profile, int debugLine, ComplexData.Enabled enabled) throws ErrorException {
+    private static List<Token> getTokens(String original, int profileNum, int debugLine, ComplexData.Enabled enabled) throws ErrorException {
 
         List<Token> tokens = new ArrayList<>();
         char[] chars = original.toCharArray();
@@ -111,7 +112,7 @@ public class ConditionalParser {
                     i++;
                 }
                 builder.append('}');
-                tokens.add(new Token(TokenType.VARIABLE, VariableParser.parseElement(builder.toString(), profile, debugLine, enabled)));
+                tokens.add(new Token(TokenType.VARIABLE, VariableParser.parseElement(builder.toString(), profileNum, debugLine, enabled)));
                 continue;
             }
             i++;
@@ -175,77 +176,77 @@ public class ConditionalParser {
 
     @SuppressWarnings("unchecked")
     private static Operation getComparisonOperation(List<Token> tokens) throws ErrorException {
-        if (tokens.size() == 1) {
-            Token token = tokens.get(0);
-            switch (token.type) {
-                case FULL_PREN: return getConditional( (List<Token>) token.value());
-                case BOOLEAN: return new Operation.Literal( (Boolean) token.value() ? 1 : 0);
-                case VARIABLE: return new Operation.BooleanVariable( (HudElement) token.value());
+        if (tokens.size() == 1)
+            return getPrimitiveOperation(tokens.get(0));
+
+        int comparatorIndex = -1;
+        for (int i = 0; i < tokens.size(); i++) {
+            if (tokens.get(i).type == TokenType.COMPARISON) {
+                comparatorIndex = i;
+                break;
             }
-            throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(0).type().toString());
-        }
-        if (tokens.size() != 3 || tokens.get(1).type() != TokenType.COMPARISON) {
-            if (tokens.size() != 3)
-                throw new ErrorException(ErrorType.CONDITIONAL_WRONG_NUMBER_OF_TOKENS, "" + tokens.size());
-            throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(1).type().toString());
         }
 
-        boolean checkBool = false;
-        boolean checkNum = false;
-        HudElement left = switch (tokens.get(0).type()) {
-            case VARIABLE -> (HudElement) tokens.get(0).value();
-            case STRING -> new StringElement((String)tokens.get(0).value());
-            case NUMBER -> { checkNum = true; yield new SudoHudElements.Num((Number)tokens.get(0).value()); }
-            case BOOLEAN -> {checkBool = true; yield new SudoHudElements.Bool((Boolean)tokens.get(0).value());}
-            default -> throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(0).type().toString());
-        };
-        HudElement right = switch (tokens.get(2).type()) {
-            case VARIABLE -> (HudElement) tokens.get(2).value();
-            case STRING -> new StringElement((String)tokens.get(2).value());
-            case NUMBER -> { checkNum = true; yield new SudoHudElements.Num((Number)tokens.get(2).value()); }
-            case BOOLEAN -> {checkBool = true; yield new SudoHudElements.Bool((Boolean)tokens.get(2).value());}
-            default -> throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(2).type().toString());
-        };
+        if (comparatorIndex == -1)
+            return getMathOperation(tokens);
+        else if (comparatorIndex == 0 )
+            throw new ErrorException(ErrorType.CONDITIONAL_WRONG_NUMBER_OF_TOKENS, "No values on the left of comparison");
+        else if (comparatorIndex == tokens.size()-1)
+            throw new ErrorException(ErrorType.CONDITIONAL_WRONG_NUMBER_OF_TOKENS, "No values on the right of comparison");
 
-        return new Operation.Comparison(left, right, (Comparison) tokens.get(1).value(), checkBool, checkNum);
+        HudElement left = comparatorIndex == 1 ?
+                getValueElement(tokens.get(0)) :
+                new SudoElements.Op(getMathOperation(tokens.subList(0, comparatorIndex)));
+        HudElement right = comparatorIndex == tokens.size()-2 ?
+                getValueElement(tokens.get(tokens.size()-1)) :
+                new SudoElements.Op(getMathOperation(tokens.subList(comparatorIndex+1, tokens.size())));
+
+        return new Operation.Comparison(left, right, (Comparison) tokens.get(comparatorIndex).value());
     }
 
     //TODO
     private static Operation getMathOperation(List<Token> tokens) throws ErrorException {
-        if (tokens.size() == 1) {
-            Token token = tokens.get(0);
-            switch (token.type) {
-                case FULL_PREN: return getConditional( (List<Token>) token.value());
-                case BOOLEAN: return new Operation.Literal( (Integer) token.value());
-                case VARIABLE: return new Operation.BooleanVariable( (HudElement) token.value());
+        if (tokens.size() == 1)
+            return getPrimitiveOperation(tokens.get(0));
+
+        Pair<List<List<Token>>, List<MathOperator>> multiplyPairs = split(tokens, List.of(MathOperator.MULTIPLY, MathOperator.DIVIDE, MathOperator.MOD));
+        List<Operation> ops = new ArrayList<>();
+
+        for (var partTokens : multiplyPairs.getFirst()) {
+            Pair<List<List<Token>>, List<MathOperator>> addingPairs = split(partTokens, List.of(MathOperator.ADD, MathOperator.SUBTRACT));
+            List<HudElement> elements = new ArrayList<>();
+            for (var partPartToken : addingPairs.getFirst()) {
+                if (partPartToken.size() > 1)
+                    throw new ErrorException(ErrorType.CONDITIONAL_WRONG_NUMBER_OF_TOKENS, "No operation between values");
+                elements.add( getValueElement(partPartToken.get(0)) );
             }
-            throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(0).type().toString());
+            ops.add(new Operation.MathOperation(elements, addingPairs.getSecond()));
         }
+        return new Operation.MathOperationOp(ops, multiplyPairs.getSecond());
 
-        if (tokens.size() != 3 || tokens.get(1).type() != TokenType.COMPARISON) {
-            if (tokens.size() != 3)
-                throw new ErrorException(ErrorType.CONDITIONAL_WRONG_NUMBER_OF_TOKENS, "" + tokens.size());
-            throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(1).type().toString());
-        }
+    }
 
-        boolean checkBool = false;
-        boolean checkNum = false;
-        HudElement left = switch (tokens.get(0).type()) {
-            case VARIABLE -> (HudElement) tokens.get(0).value();
-            case STRING -> new StringElement((String)tokens.get(0).value());
-            case NUMBER -> { checkNum = true; yield new SudoHudElements.Num((Number)tokens.get(0).value()); }
-            case BOOLEAN -> {checkBool = true; yield new SudoHudElements.Bool((Boolean)tokens.get(0).value());}
-            default -> throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(0).type().toString());
+    @SuppressWarnings("unchecked")
+    private static HudElement getValueElement(Token token) throws ErrorException {
+        return switch (token.type()) {
+            case VARIABLE -> (HudElement) token.value();
+            case STRING -> new SudoElements.Str((String) token.value());
+            case NUMBER -> new SudoElements.Num((Number) token.value());
+            case BOOLEAN -> new SudoElements.Bool((Boolean) token.value());
+            case FULL_PREN -> new SudoElements.Op(getConditional((List<Token>) token.value()));
+            default -> throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, token.type().toString());
         };
-        HudElement right = switch (tokens.get(2).type()) {
-            case VARIABLE -> (HudElement) tokens.get(2).value();
-            case STRING -> new StringElement((String)tokens.get(2).value());
-            case NUMBER -> { checkNum = true; yield new SudoHudElements.Num((Number)tokens.get(2).value()); }
-            case BOOLEAN -> {checkBool = true; yield new SudoHudElements.Bool((Boolean)tokens.get(2).value());}
-            default -> throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, tokens.get(2).type().toString());
-        };
+    }
 
-        return new Operation.Comparison(left, right, (Comparison) tokens.get(1).value(), checkBool, checkNum);
+    @SuppressWarnings("unchecked")
+    private static Operation getPrimitiveOperation(Token token) throws ErrorException {
+        return switch (token.type) {
+            case FULL_PREN -> getConditional((List<Token>) token.value());
+            case BOOLEAN -> new Operation.Literal((Integer) token.value());
+            case NUMBER -> new Operation.Literal((Double) token.value());
+            case VARIABLE -> new Operation.BooleanVariable((HudElement) token.value());
+            default -> throw new ErrorException(ErrorType.CONDITIONAL_UNEXPECTED_VALUE, token.type().toString());
+        };
     }
 
     private static List<List<Token>> split(List<Token> tokens, TokenType type) {
@@ -262,6 +263,25 @@ public class ConditionalParser {
         }
         sections.add(current);
         return sections;
+    }
+
+    @SuppressWarnings("SuspiciousMethodCalls")
+    private static Pair<List<List<Token>>, List<MathOperator>> split(List<Token> tokens, List<MathOperator> ops) {
+        List<List<Token>> sections = new ArrayList<>();
+        List<MathOperator> operators = new ArrayList<>();
+        List<Token> current = new ArrayList<>();
+
+        for (Token token : tokens) {
+            if ( token.type == TokenType.MATH && ops.contains(token.value())) {
+                sections.add(current);
+                operators.add((MathOperator) token.value());
+                current = new ArrayList<>();
+            }
+            else
+                current.add(token);
+        }
+        sections.add(current);
+        return Pair.of(sections, operators);
     }
 
 
